# crypto-dashboard-backend

./: .dockerignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1e9ff902ba56_add_new_field.py  8234bc87b75c_add_leaderboard_table.py  957b110e6910_initial.py
app/: celery_worker.py  main.py
app/api/v1/: __init__.py
app/api/v1/routes/: auth.py  leaderboard.py  prices.py  trade.py  watchlist.py
app/core/: config.py  security.py
app/db/: mongo.py  postgres.py
app/messaging/: consumer.py  producer.py
app/models/: base_model.py  leaderboard.py  trade.py  user.py  watchlist.py
app/schemas/: leaderboard.py  price.py  trade.py  user.py  watchlist.py
app/services/: auth_service.py  leaderboard.py  mongo_service.py  oauth_service.py  portfolio.py  price_stream.py
app/tasks/: clean_old_prices.py  sync_top_coins.py
